fix home page on ie

--- a/client/src/assets/stylus/views/main-landing.styl
+++ b/client/src/assets/stylus/views/main-landing.styl
@@ -77,7 +77,8 @@ header-height = 400px;
     .card-item {
         order: 0;
         flex: 0 1 auto;
-        align-self: auto;
+        box-sizing: border-box;
+        max-width: 100%;
     }
 
 
